<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="validate_password">password must 8 characters</string>
    <string name="validate_email">invalid email format</string>
    <string name="email_example"><![CDATA[>email@dicoding.com]]></string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="tv_login">LOGIN</string>
    <string name="tv_register">REGISTER</string>
    <string name="register">Register</string>
    <string name="register_success">Succes</string>
    <string name="login_success">Login Succes</string>
    <string name="img_title">Image Title Story</string>
    <string name="back_button">Back</string>
    <string name="camera">Camera\n</string>
    <string name="gallery">Gallery</string>
    <string name="share_your_story">Share your story.....</string>
    <string name="add_story">Upload Story</string>
    <string name="upload_success">Upload Succes</string>
    <string name="story">STORY</string>
    <string name="post_story">POST STORY</string>
    <string name="info">This page will be developed in the final submission</string>
    <string name="logout">Logout</string>
    <string name="logout_succes">Logout Succes</string>
    <string name="no_story_data">No story data</string>
    <string name="token_not_available">Token Not Available</string>
    <string name="please_fill_a_description">Please Fill a Description</string>
    <string name="please_select_image">Please Select Image</string>
    <string name="invalid_story_id_or_token">Invalid StoryId or Token</string>
    <string name="fill_out_all_form">Fill out All Form</string>
    <string name="stories_location">Stories Location</string>
    <string name="title_activity_storie_maps">StorieMapsActivity</string>
    <string name="retry">Try Again</string>
    <string name="add_location">Add Location</string>
    <string name="from">from</string>
    <string name="galang_riarulhaq">Galang Riarulhaq</string>
</resources>